--- a/index.html
+++ b/index.html
@@ -1,54 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Test Page: Don't Panic</title>
-    <meta charset="utf-8">
-    
-    <style>
-      a {
-        color: red;
-      }
-      #exec-bio {
-        background-color: lightgray;
-      }
-      .bio-box {
-        border: 1px solid black;
-      }
-      .bio-box a {
-        color: green;
-      }
-      .to-azure {
-        background-color: yellow;
-      }
-    </style>  
-
-  </head>
-  <body>
-    <h1>I'm an h1</h1>
-    <ul>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-    </ul>
-    <h2>I'm an h2</h2>
-    <div>
-    <div id="exec-bio" class="bio-box to-azure">      
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div class="bio-box to-azure">
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div class="bio-box to-azure">
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div class="bio-box to-azure">
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-  </body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
