--- a/idi-footer.html
+++ b/idi-footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: black;">
-<h1>IDI Footer</h1>
+<body style="background-color: black; text-align: center; color:grey;">
+Privacy Policy
 </body>
 </html>
