--- a/idi-footer.html
+++ b/idi-footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: black; text-align: center; color:grey;">
+<body style="background-color: black; text-align: center; color:#bbbbbb;">
 Privacy Policy
 </body>
 </html>
