--- a/idi-footer.html
+++ b/idi-footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color: black; text-align: center; color:#bbbbbb; font-family: 'Open Sans';">
-<a href="https://docs.google.com/document/d/1QAPhMbOZvyZqZvqg6CUyeh5QDTgnKAxz/edit?usp=sharing&ouid=106397777552348700444&rtpof=true&sd=true">Privacy Policy</a>
+<a href="https://docs.google.com/document/d/1QAPhMbOZvyZqZvqg6CUyeh5QDTgnKAxz/edit?usp=sharing&ouid=106397777552348700444&rtpof=true&sd=true" target="_blank">Privacy Policy</a>
 </body>
 </html>
