--- a/idi-footer.html
+++ b/idi-footer.html
@@ -38,11 +38,15 @@
     </style>
 </head>
 <body style="background-color: black; text-align: center; color:#bbbbbb; font-family: 'Open Sans';">
-<a href="https://docs.google.com/document/d/1QAPhMbOZvyZqZvqg6CUyeh5QDTgnKAxz/edit?usp=sharing&ouid=106397777552348700444&rtpof=true&sd=true" target="_blank">Privacy Policy</a>
 <div class="row">
-    <div class="column">Col 1</div>
-    <div class="column">Col 2</div>
-    <div class="column">Col 3</div>
+    <div class="column">
+        <a href="https://www.identitydevelopmentinstitute.com/contact-us">Contact</a>
+    </div>
+    <div class="column">
+        <a href="https://docs.google.com/document/d/1QAPhMbOZvyZqZvqg6CUyeh5QDTgnKAxz/edit?usp=sharing&ouid=106397777552348700444&rtpof=true&sd=true" target="_blank">Privacy Policy
+        </a>
+    </div>
+    <div class="column"></div>
   </div> 
 </body>
 </html>
