--- a/idi-footer.html
+++ b/idi-footer.html
@@ -41,6 +41,15 @@
 <div class="row">
     <div class="column">
         <a href="https://www.identitydevelopmentinstitute.com/contact-us">Contact</a>
+        more stuff<br><br>
+        more stuff<br><br>
+        more stuff<br><br>
+        more stuff<br><br>
+        more stuff<br><br>
+        more stuff<br><br>
+        more stuff<br><br>
+        more stuff<br><br>
+        more stuff<br><br>
     </div>
     <div class="column">
         <a href="https://docs.google.com/document/d/1QAPhMbOZvyZqZvqg6CUyeh5QDTgnKAxz/edit?usp=sharing&ouid=106397777552348700444&rtpof=true&sd=true" target="_blank">Privacy Policy
