--- a/idi-footer.html
+++ b/idi-footer.html
@@ -35,9 +35,15 @@
             display: table;
             clear: both;
         } 
+        .footeridi {
+            background-color: black;
+            text-align: center; 
+            color:#bbbbbb; 
+            font-family: "Open Sans", Arial, Helvetica, sans-serif;
+        }
     </style>
 </head>
-<body style="background-color: black; text-align: center; color:#bbbbbb; font-family: 'Open Sans';">
+<body>
 <div class="row">
     <div class="column">
         <a href="https://www.identitydevelopmentinstitute.com/contact-us">Contact</a>
