--- a/idi-footer.html
+++ b/idi-footer.html
@@ -47,14 +47,10 @@
 <div class="row">
     <div class="column">
         <a href="https://www.identitydevelopmentinstitute.com/contact-us">Contact</a>
-        more stuff<br>
-        more stuff<br>
-        more stuff<br>
-        more stuff<br>
-        more stuff<br>
-        more stuff<br>
-        more stuff<br>
-        more stuff<br>
+        Row 2<br>
+        Row 3<br>
+        Row 4<br>
+        Row 5<br>
     </div>
     <div class="column">
         <a href="https://docs.google.com/document/d/1QAPhMbOZvyZqZvqg6CUyeh5QDTgnKAxz/edit?usp=sharing&ouid=106397777552348700444&rtpof=true&sd=true" target="_blank">Privacy Policy
