--- a/idi-footer.html
+++ b/idi-footer.html
@@ -35,7 +35,7 @@
             display: table;
             clear: both;
         } 
-        .footeridi {
+        .idi-footer {
             background-color: black;
             text-align: center; 
             color:#bbbbbb; 
@@ -43,7 +43,7 @@
         }
     </style>
 </head>
-<body>
+<body class="idi-footer">
 <div class="row">
     <div class="column">
         <a href="https://www.identitydevelopmentinstitute.com/contact-us">Contact</a>
