--- a/idi-footer.html
+++ b/idi-footer.html
@@ -46,7 +46,7 @@
 <body class="idi-footer">
 <div class="row">
     <div class="column">
-        <a href="https://www.identitydevelopmentinstitute.com/contact-us">Contact</a>
+        <a href="https://www.identitydevelopmentinstitute.com/contact-us">Contact</a><br>
         Row 2<br>
         Row 3<br>
         Row 4<br>
