--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
         <span class="slide">
           <img src="./imgs/pic4.jpg" alt="" />
         </span>
+        <span class="slide">
+          <img src="./imgs/pic5.jpg" alt="" />
+        </span>
+        <span class="slide">
+          <img src="./imgs/pic6.jpg" alt="" />
+        </span>
+        <span class="slide">
+          <img src="./imgs/pic7.jpg" alt="" />
+        </span>
+        <span class="slide">
+          <img src="./imgs/pic8.jpg" alt="" />
+        </span>
+        <span class="slide">
+          <img src="./imgs/biz-card.jpg" alt="" />
+        </span>
+
       </div>
 
       <a href="#" id="prev" class="prev">
